# puzzle_solver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
examples/: new.ipynb  polar_coordonate.ipynb  tile_detection copy.ipynb  tile_detection.ipynb
puzzle_solver/: __init__.py  convex_hull.py  edge.py  plot.py  puzzle_piece.py  tile_detector.py  utils.py
